makes text white and fixes alignment

--- a/src/styles/App/index.css
+++ b/src/styles/App/index.css
@@ -1,9 +1,6 @@
 .App {
   text-align: center;
-}
-
-.dbsLogo {
-  height: 190px;
+  
 }
 
 .App-logo {
