--- a/src/styles/VideoEmbed/index.css
+++ b/src/styles/VideoEmbed/index.css
@@ -1,6 +1,6 @@
 .video-player {
     margin: 1%;
-    height: 1660px;
+    height: 1628px;
     width: 2880px;
 }
 
