--- a/src/styles/Welcome/index.css
+++ b/src/styles/Welcome/index.css
@@ -7,8 +7,11 @@
     margin-left:20px;
     border: solid 5px;
     padding: 20px;    
+    color: white;
+    height: 1575px;
 }
 
 .welcomeText {
     font-size: 200%;
+    color: white;
 }
